# hommod-kmad

./: .gitignore  FeaturesProfile.cpp  FeaturesProfile.h  HommodKmad.cpp  Makefile  Makefile.am  Makefile.in  Profile.cpp  README.md  ScoringMatrix.cpp  Sequences.cpp  config.h  config.h.in  configure.ac  findVal.cpp  misc.cpp  misc.h  vecUtil.cpp
src/: FeaturesProfile.cpp  HommodKmad.cpp  Profile.cpp  ScoringMatrix.cpp  ScoringMatrix.h  Sequences.cpp  Sequences.h  findVal.cpp  misc.cpp  misc.h  substitutionMatrix.cpp  substitutionMatrix.h  txtProc.cpp  txtProc.h  vecUtil.cpp
